correct gap space

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -362,7 +362,7 @@ body {
         .aside__showmore-btn {
             color: #e22c3f;
             padding: 3px 10px;
-            width: 40%;
+            width: 47%;
             position: relative;
             font-size: 1.5rem;
             font-weight: 500;
@@ -505,7 +505,7 @@ body {
                 display: flex;
                 justify-content: center;
                 padding: 2.4rem 7rem 2.6rem;
-                gap: 4rem;
+                gap: 2rem;
 
                 li {
                     cursor: pointer;
